--- a/IntroductionToiCloud/iCloudUIDoc/iCloudUIDoc.csproj
+++ b/IntroductionToiCloud/iCloudUIDoc/iCloudUIDoc.csproj
@@ -42,7 +42,8 @@
     </MtouchI18n>
     <AssemblyName>iCloud</AssemblyName>
     <CodesignEntitlements>Entitlements.plist</CodesignEntitlements>
-  <MtouchArch>i386, x86_64</MtouchArch>  <CodesignKey>iPhone Developer</CodesignKey>
+    <MtouchArch>i386, x86_64</MtouchArch>
+    <CodesignKey>iPhone Developer</CodesignKey>
 </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|iPhone' ">
     <DebugSymbols>true</DebugSymbols>
